포트폴리오 수정

--- a/common/css/main.css
+++ b/common/css/main.css
@@ -12,6 +12,7 @@ footer{}
 
 /* header */
 h1{position:fixed; left:3vw; top:20px; width:130px; font-size:25px; font-weight:bold; text-align:center; line-height:1.2; z-index:4; transition:font-size 0.5s;}/* motion */
+h1 .h1_txt{font-size:14px; color:red;}
 .active h1{font-size:20px;}/* motion */
 nav{position:fixed; left:0px; top:0px; width:100vw; padding:20px 0 0; z-index:3;}
 nav .m-btn{display:none;}
