--- a/common/css/main.css
+++ b/common/css/main.css
@@ -183,7 +183,9 @@ section{height:100vh;}
 .swiper-button-next{display:none;}
 .swiper-button-prev{display:none;}
 .work-box .work-pagination{width:50vw; margin:0  0 0 -25vw; left:50%; top:95%; z-index:5;}
-
+.WebSquare{margin:140px 0 0 70px;}
+.WebSquare li:fitsr-child {font-weight:bold;}
+.WebSquare li{margin-bottom:10px;}
 /* tip */
 .tip{}
 .tab-box{width:100vw; height:100vh; margin:0; padding:0; text-align:center; box-shadow:5px 5px 5px gray; background:#00807F;}
