--- a/common/css/main.css
+++ b/common/css/main.css
@@ -184,7 +184,7 @@ section{height:100vh;}
 .swiper-button-prev{display:none;}
 .work-box .work-pagination{width:50vw; margin:0  0 0 -25vw; left:50%; top:95%; z-index:5;}
 .WebSquare{margin:140px 0 0 70px;}
-.WebSquare li:fitsr-child {font-weight:bold;}
+.WebSquare li::fitsr-child{font-weight:bold;}
 .WebSquare li{margin-bottom:10px;}
 /* tip */
 .tip{}
